--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 <title>Responsive Layout</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
@@ -10,9 +10,9 @@
 <h1>Responsive Layout</h1>
 
 <div class="row">
-  <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
-  <div class="col-lg-3 col-md-12"><p>Item 3</p></div>
+  <div class="col-lg-4 col-md-6"><p>Item 1</p></div>
+  <div class="col-lg-4 col-md-6"><p>Item 2</p></div>
+  <div class="col-lg-4 col-md-12"><p>Item 3</p></div>
 </div>
 
 </body>
