--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,16 +4,16 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Responsive Layout</title>
-<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1>Responsive Layout</h1>
+<h1>Food List</h1>
 
-<div class="row">
-  <div class="col-lg-4 col-md-6"><p>Item 1</p></div>
-  <div class="col-lg-4 col-md-6"><p>Item 2</p></div>
-  <div class="col-lg-4 col-md-12"><p>Item 3</p></div>
+<div id="container">
+    <div class="row">
+        <div class="col-lg-3 col-md-5 col-sd-12"><p><span class="section-title">Pizza</span>A delicious Italian dish with a crispy crust, topped with tomato sauce, cheese, and various ingredients. Loved for its versatility and melty cheese.</p></div>
+        <div class="col-lg-3 col-md-5 col-sd-12"><p><span class="section-title">Sushi</span>A traditional Japanese dish featuring vinegared rice combined with fresh seafood, vegetables, and fruits. Known for its delicate flavors and artful presentation.</p></div>
+        <div class="col-lg-3 col-md-11 col-sd-12"><p><span class="section-title">Tacos</span>A beloved Mexican dish consisting of a tortilla filled with seasoned meat, beans, cheese, and toppings. Offers vibrant flavors and customizable options.</p></div>
+    </div>
 </div>
-
 </body>
 </html>
