--- a/mod2sol/index.html
+++ b/mod2sol/index.html
@@ -3,18 +3,21 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/style.css">
-<title>Responsive Layout</title>
+<title>Food List</title>
+<link rel="stylesheet" href=css/style.css>
+
 </head>
 <body>
-<h1>Food List</h1>
+<h1>Our Menu</h1>
 
-<div id="container">
-    <div class="row">
-        <div class="col-lg-3 col-md-5 col-sd-12"><p><span class="section-title">Pizza</span>A delicious Italian dish with a crispy crust, topped with tomato sauce, cheese, and various ingredients. Loved for its versatility and melty cheese.</p></div>
-        <div class="col-lg-3 col-md-5 col-sd-12"><p><span class="section-title">Sushi</span>A traditional Japanese dish featuring vinegared rice combined with fresh seafood, vegetables, and fruits. Known for its delicate flavors and artful presentation.</p></div>
-        <div class="col-lg-3 col-md-11 col-sd-12"><p><span class="section-title">Tacos</span>A beloved Mexican dish consisting of a tortilla filled with seasoned meat, beans, cheese, and toppings. Offers vibrant flavors and customizable options.</p></div>
-    </div>
+<div class="row">
+  <div class="col-lg-4 col-md-6" id="box">
+    <p id="p1">Pizza</p>A delicious Italian dish with a crispy crust, topped with tomato sauce, cheese, and various ingredients. Loved for its versatility and melty cheese.</div>
+  <div class="col-lg-4 col-md-6"id="box">
+    <p id="p2">Sushi</p>A traditional Japanese dish featuring vinegared rice combined with fresh seafood, vegetables, and fruits. Known for its delicate flavors and artful presentation.</div>
+  <div class="col-lg-4 col-md-12" id="box">
+    <p id="p3">Tacos</p>A beloved Mexican dish consisting of a tortilla filled with seasoned meat, beans, cheese, and toppings. Offers vibrant flavors and customizable options.</div>
 </div>
+
 </body>
 </html>
