--- a/mod2sol/index.html
+++ b/mod2sol/index.html
@@ -12,11 +12,11 @@
 
 <div class="row">
   <div class="col-lg-4 col-md-6" id="box">
-    <p id="p1">Pizza</p>A delicious Italian dish with a crispy crust, topped with tomato sauce, cheese, and various ingredients. Loved for its versatility and melty cheese.</div>
+    <p id="p1">Pizza</p>Pizza is a popular Italian dish that has gained worldwide recognition. It typically consists of a round, flat dough base topped with various ingredients such as tomato sauce, cheese, vegetables, and meats. The dough is often baked in a hot oven, resulting in a crispy crust with a soft and chewy interior. Pizza is known for its versatility, as it can be customized with different toppings to suit individual preferences. It is loved for its delicious flavors, melty cheese, and the combination of savory ingredients.</div>
   <div class="col-lg-4 col-md-6"id="box">
-    <p id="p2">Sushi</p>A traditional Japanese dish featuring vinegared rice combined with fresh seafood, vegetables, and fruits. Known for its delicate flavors and artful presentation.</div>
+    <p id="p2">Sushi</p>Sushi is a traditional Japanese dish that has become immensely popular globally. It is characterized by vinegared rice combined with a variety of ingredients such as raw or cooked seafood, vegetables, and sometimes tropical fruits. Sushi is often presented in bite-sized pieces and beautifully arranged on a platter. It is enjoyed with soy sauce, wasabi, and pickled ginger. Sushi is known for its delicate flavors, fresh ingredients, and the artistry involved in its preparation. It offers a unique dining experience and is favored by those who appreciate the balance of flavors and textures.</div>
   <div class="col-lg-4 col-md-12" id="box">
-    <p id="p3">Tacos</p>A beloved Mexican dish consisting of a tortilla filled with seasoned meat, beans, cheese, and toppings. Offers vibrant flavors and customizable options.</div>
+    <p id="p3">Tacos</p>Tacos are a beloved Mexican dish that has gained widespread popularity. They consist of a tortilla, typically made from corn or flour, filled with various ingredients such as seasoned meat (such as beef, chicken, or pork), beans, cheese, lettuce, salsa, and other toppings. Tacos are known for their vibrant flavors, bold spices, and the ability to customize them to individual preferences. They can be enjoyed as street food, in casual eateries, or even in upscale restaurants. Tacos offer a satisfying combination of savory, spicy, and fresh elements, making them a favorite among food enthusiasts.</div>
 </div>
 
 </body>
