--- a/mod4sol/index.html
+++ b/mod4sol/index.html
@@ -1,15 +1,19 @@
-index.html
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-	<h1>------------------------- My module-4 solution ------------------------</h1>
-  <h2>-------------------Right click here and inspect element to check the console out--------------------</h2>
-	<script src="script.js" ="text/javascript">
-	
-		</script>
+Hello Yaakov
 
-</body>
-</html>
+Good Bye John
+
+Good Bye Jen
+
+Good Bye Jason
+
+Hello Paul
+
+Hello Frank
+
+Hello Larry
+
+Hello Paula
+
+Hello Laura
+
+Good Bye Jim
