--- a/mod4sol/index.html
+++ b/mod4sol/index.html
@@ -1,19 +1,1 @@
-Hello Yaakov
-
-Good Bye John
-
-Good Bye Jen
-
-Good Bye Jason
-
-Hello Paul
-
-Hello Frank
-
-Hello Larry
-
-Hello Paula
-
-Hello Laura
-
-Good Bye Jim
+Module 4 Solution Starter
