--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html ng-app="custom-webapp-ui" lang="en">
   <head>
+    <style>
+      body{
+        background-color: white;
+      }
+    </style>
     <!-- Load the Telegram Library -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <!--Load the AngularJS Library-->
