--- a/4/index.html
+++ b/4/index.html
@@ -19,7 +19,7 @@
 
             // Create a JSON payload with the command
             const payload = {
-                command: hi
+                command: command
             };
 
             // Send a POST request to the server
