--- a/4/index.html
+++ b/4/index.html
@@ -10,7 +10,7 @@
 
     <h1>Telegram Bot Interaction</h1>
 
-    <button onclick="sendCommand('/start')">Start Command</button>
+    <button onclick="sendCommand('/hi')">Start Command</button>
     
     <script>
         function sendCommand(command) {
