--- a/4/index.html
+++ b/4/index.html
@@ -15,7 +15,7 @@
     <script>
         function sendCommand(command) {
             // Define the endpoint URL of your Python server
-            const serverUrl = 'https://7325-82-24-140-107.ngrok-free.app/bot-command';
+            const serverUrl = 'https://nominally-amused-calf.ngrok-free.app/bot-command';
 
             // Create a JSON payload with the command
             const payload = {
