--- a/4/index.html
+++ b/4/index.html
@@ -20,6 +20,7 @@
             // Create a JSON payload with the command
             const payload = {
                 command: "/hi"
+                chat_id: "160699767"
             };
 
             // Send a POST request to the server
