--- a/4/index.html
+++ b/4/index.html
@@ -10,7 +10,7 @@
 
     <h1>Telegram Bot Interaction</h1>
 
-    <button onclick="sendCommand('/hi')">Start Command</button>
+    <button onclick="sendCommand('/trade')">Start Command</button>
     
     <script>
         function sendCommand(command) {
@@ -19,7 +19,7 @@
 
             // Create a JSON payload with the command
             const payload = {
-                command: "/hi"
+                command: "/trade"
             };
 
             // Send a POST request to the server
