--- a/5/index.html
+++ b/5/index.html
@@ -11,21 +11,16 @@
   <div>
     <label for="symbolSelect">Symbol:</label>
     <select id="symbolSelect">
-      <option value="BTC">BTC</option>
-      <option value="ETH">ETH</option>
+      <option value="BTCUSDT">BTC</option>
+      <option value="ETHUSDT">ETH</option>
     </select>
     <label for="leverageSelect">Leverage:</label>
     <select id="leverageSelect">
-      <option value="1x">1x</option>
-      <option value="2x">2x</option>
-      <option value="3x">3x</option>
-      <option value="4x">4x</option>
-      <option value="5x">5x</option>
-      <option value="6x">6x</option>
-      <option value="7x">7x</option>
-      <option value="8x">8x</option>
-      <option value="9x">9x</option>
-      <option value="10x">10x</option>
+      <option value="1">1x</option>
+      <option value="2">2x</option>
+      <option value="3">3x</option>
+      <option value="4">4x</option>
+      <option value="5">5x</option>
     </select>
     <label for="usdtInput">USDT Amount:</label>
     <input type="text" id="usdtInput">
@@ -42,7 +37,7 @@
       const leverage = leverageSelect.value;
       const usdtAmount = usdtInput.value;
 
-      const serverUrl = 'http://localhost:80/bot-command';  // Change the server URL to match your setup
+      const serverUrl = 'https://nominally-amused-calf.ngrok-free.app/bot-command';  // Change the server URL to match your setup
       const payload = {
         command: '/trade',
         symbol: symbol,
