--- a/5/index.html
+++ b/5/index.html
@@ -94,7 +94,8 @@
 
       usdtInput.value = '';
     }
-    
+  </script>
+  <script>
     function sendSl() {
       const sl_symbolSelect = document.getElementById('sl_symbolSelect');
       const sl_usdtInput = document.getElementById('sl_usdtInput');
@@ -126,7 +127,8 @@
 
       sl_usdtInput.value = '';
     }
-    
+  </script>
+  <script>
     function sendTp() {
       const tp_symbolSelect = document.getElementById('tp_symbolSelect');
       const tp_usdtInput = document.getElementById('tp_usdtInput');
