--- a/5/index.html
+++ b/5/index.html
@@ -42,7 +42,7 @@
       <option value="ETHUSDT">ETH</option>
     </select>
     <label for="sl_usdtInput">Desired loss per usdt:</label>
-    <input type="text" id="usdtInput">
+    <input type="text" id="sl_usdtInput">
     <button type="button" onclick="sendSl()">Add</button>
   </div>
 
@@ -55,12 +55,46 @@
       <option value="ETHUSDT">ETH</option>
     </select>
     <label for="tp_usdtInput">Desired loss per usdt:</label>
-    <input type="text" id="usdtInput">
+    <input type="text" id="tp_usdtInput">
     <button type="button" onclick="sendTp()">Add</button>
   </div>
 
- 
   <script>
+    function sendTrade() {
+      const symbolSelect = document.getElementById('symbolSelect');
+      const leverageSelect = document.getElementById('leverageSelect');
+      const usdtInput = document.getElementById('usdtInput');
+
+      const symbol = symbolSelect.value;
+      const leverage = leverageSelect.value;
+      const usdtAmount = usdtInput.value;
+
+      const serverUrl = 'https://nominally-amused-calf.ngrok-free.app/bot-command';
+      const payload = {
+        command: '/trade',
+        symbol: symbol,
+        leverage: leverage,
+        usdtAmount: usdtAmount
+      };
+
+      fetch(serverUrl, {
+          method: 'POST',
+          headers: {
+              'Content-Type': 'application/json',
+          },
+          body: JSON.stringify(payload),
+      })
+      .then(response => response.json())
+      .then(data => {
+          console.log('Server Response:', data);
+      })
+      .catch(error => {
+          console.error('Error:', error);
+      });
+
+      usdtInput.value = '';
+    }
+
     function sendSl() {
       const sl_symbolSelect = document.getElementById('sl_symbolSelect');
       const sl_usdtInput = document.getElementById('sl_usdtInput');
@@ -92,7 +126,38 @@
 
       sl_usdtInput.value = '';
     }
-  </script>
 
+    function sendTp() {
+      const tp_symbolSelect = document.getElementById('tp_symbolSelect');
+      const tp_usdtInput = document.getElementById('tp_usdtInput');
+
+      const tp_symbol = tp_symbolSelect.value;
+      const desired_profit = tp_usdtInput.value;
+
+      const serverUrl = 'https://nominally-amused-calf.ngrok-free.app/bot-command';
+      const payload = {
+        command: '/tp',
+        tp_symbol: tp_symbol,
+        desired_profit: desired_profit
+      };
+
+      fetch(serverUrl, {
+          method: 'POST',
+          headers: {
+              'Content-Type': 'application/json',
+          },
+          body: JSON.stringify(payload),
+      })
+      .then(response => response.json())
+      .then(data => {
+          console.log('Server Response:', data);
+      })
+      .catch(error => {
+          console.error('Error:', error);
+      });
+
+      tp_usdtInput.value = '';
+    }
+  </script>
 </body>
 </html>
