--- a/5/index.html
+++ b/5/index.html
@@ -130,7 +130,7 @@
           console.error('Error:', error);
       });
 
-      usdtInput.value = '';
+      sl_usdtInput.value = '';
     }
 
     function sendTp() {
