--- a/5/index.html
+++ b/5/index.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h1>Crypto Trader</h1>
+  <h2>Trade setting</h2>
 
   <div>
     <label for="symbolSelect">Symbol:</label>
@@ -34,9 +34,9 @@
       <option value="4">4x</option>
       <option value="5">5x</option>
     </select>
-    <label for="usdtInput">USDT Amount:</label>
+    <label for="usdtInput">Amount:</label>
     <input type="text" id="usdtInput">
-    <button type="button" onclick="sendTrade()">Trade</button>
+    <button type="button" onclick="sendTrade()">Set</button>
   </div>
 
   <h2>SL setting</h2>
