--- a/5/index.html
+++ b/5/index.html
@@ -151,7 +151,7 @@ function sendTp() {
 function sendOp() {
     sendRequest('/open_positions', {});
 }
-function sendOp() {
+function sendCancel() {
     sendRequest('/cancel_open_orders', {});
 }
 </script>
