--- a/5/index.html
+++ b/5/index.html
@@ -68,8 +68,7 @@
   <h2>Cancel trade order</h2>
 
   <div>
-    <p>Cancel trade from queue for: </p>
-    <label for="symbolSelect">Symbol:</label>
+    <label for="symbolSelect">Cancel trade from queue for:</label>
     <select id="c_symbolSelect">
       <option value="BTCUSDT">BTC</option>
       <option value="ETHUSDT">ETH</option>
