--- a/5/index.html
+++ b/5/index.html
@@ -79,7 +79,7 @@
   <h2>Other options</h2>
   <button type="button" onclick="sendOp()">Load open positions</button>
   <button type="button" onclick="sendCancel()">Cancel all open orders</button>
-  <p>Note that open orders doesn't contain queue orders.</p>
+  <h6>Note that open orders doesn't contain queue orders.</h6>
 
 <script>
 function sendRequest(command, data) {
