--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="section">
             <div class="section-title">Trade Setting</div>
             <div class="input-group">
-                <span for="symbolSelect">Symbol</span>
+                <label for="symbolSelect">Symbol</label>
                 <select id="symbolSelect">
                     <option value="BTCUSDT">BTC</option>
                     <option value="ETHUSDT">ETH</option>
@@ -37,7 +37,7 @@
                 </select>
             </div>
             <div class="input-group">
-                <span for="leverageSelect">Leverage</span>
+                <label for="leverageSelect">Leverage</label>
                 <select id="leverageSelect">
                     <option value="1x">1x</option>
                     <option value="2x">2x</option>
@@ -62,7 +62,7 @@
                 </select>
             </div>
             <div class="input-group">
-                <span for="usdtInput">Amount</span>
+                <label for="usdtInput">Amount</label>
                 <input type="text" placeholder="0.00" id="usdtInput">
             </div>
             <div class="button-container">
